--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-cities-weather></app-cities-weather>
+<!-- Here you can directly call the CitiesWeatherComponent component, I'm just calling the router outlet as an example of a larger application -->
+<router-outlet></router-outlet>
