--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -1,4 +1,5 @@
 // This file contains all the colors of the application palette following the idea of atomic design
 
-$primary-color: cornflowerblue;
+$primary-color: rgba(22,101,192,255);
 $secondary-color: white;
+$third-color: #818181;
