--- a/src/app/modules/cities-weather/components/city-forecast/city-forecast.component.scss
+++ b/src/app/modules/cities-weather/components/city-forecast/city-forecast.component.scss
@@ -2,6 +2,7 @@
 @import "../../../../styles/colors";
 
 $cards-background-color: $secondary-color;
+$separations-color: #dbdadb;
 $cards-padding: 12px;
 
 :host {
@@ -18,7 +19,7 @@ $cards-padding: 12px;
 }
 
 .title-card {
-  border-bottom: 1px solid;
+  border-bottom: 1px solid $separations-color;
 }
 
 .card-container{
@@ -44,12 +45,27 @@ $cards-padding: 12px;
     align-items: center;
     height: 100%;
     justify-content: space-around;
+    font-size: medium;
+
+    .humidity {
+      color: rgba(102,197,225,255);
+    }
+
+    .time {
+      color: $third-color;
+    }
+
+    &:not(:last-child) {
+      border-right: 1px solid $separations-color;
+    }
   }
 }
 
 .next-days-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
 
   .day-container {
     display: flex;
@@ -57,10 +73,22 @@ $cards-padding: 12px;
     justify-content: space-around;
     min-height: 60px;
     align-items: center;
+    font-size: medium;
 
-    .description{
+    .description-container {
       display: flex;
       flex-direction: column;
+      align-items: center;
+      .time {
+        font-size: large;
+      }
+      .description {
+        color: $third-color;
+      }
+    }
+
+    &:not(:last-child) {
+      border-bottom: 1px solid $separations-color;
     }
   }
 }
