--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./app/styles/typography";
+@import "./app/styles/colors";
 
 html, body { height: 100%; }
 body {
   margin: 0;
   font-family: $app-font-family;
+}
+
+// Angular Material Override
+.mat-mdc-tab-header {
+  background-color: $secondary-color;
 }
 
 .mat-mdc-tab-body-wrapper {
